@@ -1,5 +1,9 @@
 2008-09-27  Jonathan Pryor  <jpryor@novell.com>
 
+	* doc/en/**: Flush TextReader changes.
+
+2008-09-27  Jonathan Pryor  <jpryor@novell.com>
+
 	* Makefile: Ignore more warnings when building unit tests.
 	* doc/en/**: Flush .Tokens() changes.
 
